# EchoRay

./: .gitignore  CMakeLists.txt
src/: camera.cpp  camera.h  intersection.cpp  intersection.h  main.cpp  material.h  math.cpp  math.h  pointlight.h  ray.h  raytracingstructs.h  sphere.cpp  sphere.h  utility.cpp  utility.h  world.cpp  world.h
tests/: LightShadingTests.cpp  RaySphereTests.cpp  SceneTests.cpp
